Use the proper precision in the split table.

We must have only a few users with a precision more than 2
otherwise this should have been catched a long time ago.

BUG: 331638
(cherry picked from commit 98df765f2cb5fcb2ee253d7ba7141a59b0cf7bed)